# delphes

./: .gitignore  CMakeLists.txt
cards/: delphes_card_CMS.tcl
edm4hep_plugin/: CMakeLists.txt  Delphes.cc  Delphes.h  DelphesEDM4HEP.cpp  DelphesROOT_EDM4HEP.cpp
